# berkeley-robodm-mini-repro

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: datasets.yaml  synthetic.yaml
docs/: DATASETS.md  METHODOLOGY.md  REPRODUCTION_NOTES.md  RESULT_SCHEMA.md  TRADEOFFS.md
scripts/: run_synthetic_smoke.sh
src/robot_bench/: __init__.py  cli.py  config.py  dataset_registry.py  episode_schema.py  logging_utils.py  seeds.py
src/robot_bench/benchmark/: disk.py  dummy_training.py  memory.py  runner.py  throughput.py
src/robot_bench/converters/: base.py  hdf5_converter.py  lerobot_style_converter.py  rlds_converter.py  robodm_style_converter.py  video_utils.py
src/robot_bench/loaders/: base.py  hdf5_loader.py  lerobot_style_loader.py  rlds_loader.py  robodm_style_loader.py
src/robot_bench/reports/: aggregate.py  markdown.py  plots.py  replication.py
src/robot_bench/utils/: ffmpeg.py  fs.py  subprocesses.py
tests/: conftest.py  test_benchmark_report.py  test_cli.py  test_config.py  test_roundtrip.py  test_selection_schema.py
