[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-data-format-benchmark"
version = "0.1.0"
description = "Benchmark harness for robot-learning data storage/loading formats."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "robot-data-format-benchmark contributors"}]
keywords = ["robotics", "datasets", "benchmark", "rlds", "hdf5", "lerobot", "robodm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "pyarrow>=14,<18",
  "h5py>=3.10,<4",
  "psutil>=5.9,<7",
  "pydantic>=2.5,<3",
  "PyYAML>=6,<7",
  "typer>=0.12,<1",
  "rich>=13,<15",
  "matplotlib>=3.8,<4",
  "torch>=2.2,<3",
  "pillow>=10,<12",
  "imageio>=2.34,<3",
  "imageio-ffmpeg>=0.5,<1",
]

[project.optional-dependencies]
tf = ["tensorflow-datasets>=4.9,<5", "tensorflow>=2.15,<2.18"]
dev = ["pytest>=8,<9", "ruff>=0.5,<1", "mypy>=1.8,<2"]

[project.scripts]
robot-bench = "robot_bench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "T20"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
